add medium logo

--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
         </li>
 
         <li>
+          <a href="https://medium.com/@aminul7506">
+            <i class="fa fa-medium" aria-hidden="true"></i>
+          </a>
+        </li>
+
+        <li>
           <a href="/#contact" >
             <i class="fas fa-envelope big-icon"></i>
           </a>
@@ -248,7 +254,7 @@
       <div class="col-md-5">
         <h3>Research Interests</h3>
         <ul class="ul-interests">
-          <li>Data Science</li>
+          <li>Data Science & Casual Inference</li>
 
           <li>Machine Learning</li>
 
