add medium logo

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD Student in Computer Science(First year)</p>
+              <p class="course">PhD Student in Computer Science(2023-Present)</p>
               <p class="institution">University of Illinois Chicago</p>
             </div>
           </li>
