add medium logo

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         <li>
           <a href="https://medium.com/@aminul7506">
-            <i class="fa fa-medium" aria-hidden="true"></i>
+            <i class="fa fa-medium"></i>
           </a>
         </li>
 
