add medium logo

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </li>
 
         <li>
-          <a href="https://medium.com/@aminul7506">
+          <a href="https://medium.com/@aminul7506" target="_blank" rel="noopener">
             <i class="fa fa-medium"></i>
           </a>
         </li>
