add medium logo

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <li>
           <a href="https://medium.com/@aminul7506" target="_blank" rel="noopener">
-            <i class="fa fa-medium fa-lg"></i>
+            <i class="fa fa-medium fa-xs"></i>
           </a>
         </li>
 
