--- a/index.html
+++ b/index.html
@@ -243,9 +243,10 @@
       at the University of Illinois Chicago. I have completed my B.Sc. in Computer Science and Engineering from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">
       Bangladesh University of Engineering and Technology(BUET)</a>. <br> <br>
 
-      My research interests lie in the intersection of data science, machine learning, and data privacy. In particular, I am
-      interested in reasoning with data that can answer questions and/or solve problems in different domains. I am fascinated in
-      building/improving interactive machine-learning methods with data that can reason the past, and also provide insights
+      My research interests lie in the intersection of causal inference, data science, and machine learning. In particular, I am
+      interested in causal reasoning with data that can answer questions and/or solve problems in ecommerce, social media,
+      social science, and healthcare. I am fascinated in
+      applying econometric methods for answering causal questions with data that can reason the past, and also provide insights
       for the future. I am also interested in protecting user data privacy in software applications.
     </p>
 
@@ -256,11 +257,11 @@
       <div class="col-md-5">
         <h3>Research Interests</h3>
         <ul class="ul-interests">
-          <li>Data Science & Casual Inference</li>
+          <li>Causal Inference</li>
+
+          <li>Data Science</li>
 
           <li>Machine Learning</li>
-
-          <li>Software/User Data Security</li>
 
         </ul>
       </div>
