--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
       Bangladesh University of Engineering and Technology(BUET)</a>. <br> <br>
 
       My research interests lie in the intersection of causal inference, data science, and machine learning. In particular, I am
-      interested in causal reasoning with data that can answer questions and/or solve problems in ecommerce, social media,
-      social science, and healthcare. I am fascinated in
-      applying econometric methods for answering causal questions with data that can reason the past, and also provide insights
+      interested in causal reasoning with data that can answer questions and/or solve problems in e-commerce, social media,
+      social science, and healthcare domains. I am fascinated in
+      applying econometrics methods for answering causal questions with data that can reason the past, and also provide insights
       for the future. I am also interested in protecting user data privacy in software applications.
     </p>
 
