--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
           </a>
         </li>
 
-        <li>
-          <a href="https://medium.com/@aminul7506" target="_blank" rel="noopener">
-            <i class="fa fa-medium big-icon"></i>
-          </a>
-        </li>
+<!--        <li>-->
+<!--          <a href="https://medium.com/@aminul7506" target="_blank" rel="noopener">-->
+<!--            <i class="fa fa-medium big-icon"></i>-->
+<!--          </a>-->
+<!--        </li>-->
 
 <!--        <li>-->
 <!--          <a href="/#contact" >-->
@@ -278,7 +278,7 @@
       (e.g., position bias, exposure bias, popularity bias) in different types of recommender
       systems—including learning-to-rank models, collaborative filtering methods, social recommender
       systems, and generative AI-based recommender systems—to facilitate unbiased and fair
-      recommendations. My current work leverages tools from econometrics,
+      recommendations. My current work leverages methods from econometrics,
       causal inference, machine unlearning, and large language models to mitigate these biases,
       particularly in graph-based and learning-to-rank-based recommendation frameworks.
       While my primary focus is on debiasing recommender systems, I am also interested in other compelling
@@ -310,7 +310,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD Student in Computer Science (2023-Present)</p>
+              <p class="course">PhD Student in Computer Science (Jan. 2023 to present)</p>
               <p class="institution">University of Illinois Chicago</p>
             </div>
           </li>
@@ -646,13 +646,12 @@
 
           <div class="col-12">
             <p>
-              <strong> Programming Languages: </strong>Java, Python, Kotlin, Swift, C, C++, Assembly(80X86)<br/>
-              <strong> Scripting Languages: </strong>JavaScript, HTML, CSS, MATLAB, Shell Scripts<br/>
-              <strong> Mobile Application Development & Frameworks: </strong> Android, iOS, Django<br/>
-              <strong> Database: </strong> Oracle, SQL<br/>
-              <strong> Security: </strong> AES(CBC & ECB), CommpnCrypto API, iOS Keychain<br>
-              <strong> Tools & Others : </strong> Pandas, NLTK, REST API, Beautiful Soup, Seaborn, Google ML Kit &
-                Vision API, Tensorflow, Google Map API, Firebase, JNI, JavaFX, LATEX, tkinter<br/>
+                <span style="font-weight: 500;">Programming Languages:</span> Python, Java, Swift, Kotlin, C, C++, Assembly (80X86)<br>
+                <span style="font-weight: 500;">Scripting Languages:</span> JavaScript, Shell Scripts, Java Native Interface (JNI), HTML, CSS<br>
+                <span style="font-weight: 500;">Mobile Application Development & Frameworks:</span> Android, iOS, Django<br>
+                <span style="font-weight: 500;">Database:</span> SQL, Oracle<br>
+                <span style="font-weight: 500;">Security:</span> AES (CBC & ECB), CommonCrypto API, iOS Keychain<br>
+                <span style="font-weight: 500;">Tools & Others:</span> Pandas, PyTorch, TensorFlow, OpenAI API, NLTK, REST API, Beautiful Soup, Seaborn, Firebase, Google ML Kit & Vision API, Google Map API, LaTeX
             </p>
           </div>
 
