--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 
 
 
-  <meta name="description" content="Software Engineer">
+  <meta name="description" content="PhD Student in Computer Science">
 
 
   <link rel="alternate" hreflang="en-us" href="/404.html">
