--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="Aminul Islam">
 
-  <meta name="description" content="Software Engineer, Ridmik Labs, Dhaka, Bangladesh">
+  <meta name="description" content="PhD Student in Computer Science">
 
   <link rel="alternate" hreflang="en-us" href="/">
 
@@ -48,7 +48,7 @@
 
   <meta property="og:url" content="/">
   <meta property="og:title" content="Aminul Islam">
-  <meta property="og:description" content="Software Engineer"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="PhD Student in Computer Science"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="linkedin:image" content="/images/Linkedin.png"><meta property="og:locale" content="en-us">
 
 <script type="application/ld+json">
