--- a/talk/index.html
+++ b/talk/index.html
@@ -34,7 +34,7 @@
 
 
 
-  <meta name="description" content="Software Engineer">
+  <meta name="description" content="PhD Student in Computer Science">
 
 
   <link rel="alternate" hreflang="en-us" href="/talk/">
@@ -277,7 +277,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="/talk/">
   <meta property="og:title" content="Recent &amp; Upcoming Talks | Academic">
-  <meta property="og:description" content="Software Engineer"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="PhD Student in Computer Science"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
 
 
