--- a/index.html
+++ b/index.html
@@ -418,11 +418,11 @@
             <span style="float: right;">May 2025 to present</span>
             <ul>
               <li>
-                I am working as a visiting student researcher at
+                I have worked as a visiting student researcher at
                 <a href="https://www.ideal-institute.org/" target="_blank" rel="noopener">IDEAL</a>
                 (The Institute for Data, Econometrics, Algorithms, and Learning) under the supervision
                 of Professor <a href="https://wangren09.github.io" target="_blank" rel="noopener">
-                Ren Wang</a>. I am working on applying machine unlearning methods in recommender systems.
+                Ren Wang</a>. I have worked on addressing popularity bias in GNN-based collaborative filtering in a post-hoc manner.
               </li>
             </ul>
           </div>
@@ -619,6 +619,12 @@
                 A Control Function Approach</span>
               <br>Md Aminul Islam, Kathryn Vasilaky, Elena Zheleva<br>
               <em><a href="https://arxiv.org/abs/2506.06989" target="_blank" rel="noopener">arXiv</a></em>
+            </p>
+
+              <p>
+              <span style="font-weight: 500;">[2] Post-hoc Popularity Bias Correction in GNN-based Collaborative Filtering</span>
+              <br>Md Aminul Islam, Elena Zheleva, Ren Wang<br>
+              <em><a href="https://arxiv.org/abs/2510.12959" target="_blank" rel="noopener">arXiv</a></em>
             </p>
 
           </div>
