--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
           </div>
 
           <div class="col-12">
-            <span style="font-weight: 500;">Visiting Student Researcher, IDEAL Research Institute</span>
-            <span style="float: right;">May 2025 to present</span>
+            <span style="font-weight: 500;">Internship, IDEAL Research Institute</span>
+            <span style="float: right;">May 2025 to Oct 2025</span>
             <ul>
               <li>
                 I have worked as a visiting student researcher at
@@ -657,7 +657,7 @@
                 <span style="font-weight: 500;">Mobile Application Development & Frameworks:</span> Android, iOS, Django<br>
                 <span style="font-weight: 500;">Database:</span> SQL, Oracle<br>
                 <span style="font-weight: 500;">Security:</span> AES (CBC & ECB), CommonCrypto API, iOS Keychain<br>
-                <span style="font-weight: 500;">Tools & Others:</span> Pandas, PyTorch, TensorFlow, OpenAI API, NLTK, REST API, Beautiful Soup, Seaborn, Firebase, Google ML Kit & Vision API, Google Map API, LaTeX
+                <span style="font-weight: 500;">Tools & Others:</span> Pandas, PyTorch, TensorFlow, LLMs API, NLTK, REST API, Firebase, Google ML Kit & Vision API, Google Map API, LaTeX
             </p>
           </div>
 
