--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 <!--      University of Illinois Chicago</a>. Currently, I am also working as a Teaching Assistant in Computer Science Department-->
 <!--      at the University of Illinois Chicago. I have completed my B.Sc. in Computer Science and Engineering from <a href="https://www.buet.ac.bd" target="_blank" rel="noopener">-->
 <!--      Bangladesh University of Engineering and Technology(BUET)</a>. <br> <br>-->
-      I am a third year PhD student in Computer Science at the <a href="https://cs.uic.edu" target="_blank" rel="noopener">
+      I am a fourth year PhD student in Computer Science at the <a href="https://cs.uic.edu" target="_blank" rel="noopener">
       University of Illinois Chicago</a>, advised by Professor <a href="https://www.cs.uic.edu/~elena" target="_blank" rel="noopener">
       Elena Zheleva</a>.
 
@@ -614,17 +614,18 @@
 
 
           <div class="col-12">
-            <p>
-              <span style="font-weight: 500;">[1] Correcting for Position Bias in Learning to Rank:
-                A Control Function Approach</span>
-              <br>Md Aminul Islam, Kathryn Vasilaky, Elena Zheleva<br>
-              <em><a href="https://arxiv.org/abs/2506.06989" target="_blank" rel="noopener">arXiv</a></em>
-            </p>
-
               <p>
               <span style="font-weight: 500;">[2] Post-hoc Popularity Bias Correction in GNN-based Collaborative Filtering</span>
               <br>Md Aminul Islam, Elena Zheleva, Ren Wang<br>
               <em><a href="https://arxiv.org/abs/2510.12959" target="_blank" rel="noopener">arXiv</a></em>
+            </p>
+
+            <p>
+              <span style="font-weight: 500;">[1] Correcting for Position Bias in Learning to Rank:
+                A Control Function Approach</span>
+              <br>Md Aminul Islam, Kathryn Vasilaky, Elena Zheleva<br>
+                <br>Accepted at WWW 2026 (Web Conference)<br>
+              <em><a href="https://arxiv.org/abs/2506.06989" target="_blank" rel="noopener">arXiv</a></em>
             </p>
 
           </div>
