--- a/index.html
+++ b/index.html
@@ -617,15 +617,15 @@
               <p>
               <span style="font-weight: 500;">[2] Post-hoc Popularity Bias Correction in GNN-based Collaborative Filtering</span>
               <br>Md Aminul Islam, Elena Zheleva, Ren Wang<br>
-              <em><a href="https://arxiv.org/abs/2510.12959" target="_blank" rel="noopener">arXiv</a></em>
+              <em><a href="https://arxiv.org/abs/2510.12959" target="_blank" rel="noopener">[arXiv]</a></em>
             </p>
 
             <p>
               <span style="font-weight: 500;">[1] Correcting for Position Bias in Learning to Rank:
                 A Control Function Approach</span>
               <br>Md Aminul Islam, Kathryn Vasilaky, Elena Zheleva<br>
-                <br>Accepted at WWW 2026 (Web Conference)<br>
-              <em><a href="https://arxiv.org/abs/2506.06989" target="_blank" rel="noopener">arXiv</a></em>
+                <em><a href="https://arxiv.org/abs/2506.06989" target="_blank" rel="noopener">[arXiv]</a></em>
+                Accepted at WWW 2026 (Web Conference)
             </p>
 
           </div>
